# Kimera-VIO-ROS

./: .gitignore  CMakeLists.txt  package.xml
.devcontainer/: Dockerfile  devcontainer.json  kimera_vio_ros.code-workspace  pixi.toml
include/kimera_vio_ros/: KimeraVioRos.h  RerunVisualizer.h
launch/: kimera_vio_ros.launch  kimera_vio_ros_euroc.launch  kimera_vio_ros_euroc_xfeat.launch
src/: KimeraVioRos.cpp
